--- a/index.html
+++ b/index.html
@@ -34,12 +34,18 @@
     <!-- Bootstrap core JavaScript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script src="dist/build.js"></script>
       <script src="/libs/jquery/dist/jquery.min.js"></script>
       <script src="/libs/jquery-migrate/dist/jquery-migrate.min.js"></script>
+      <!-- The jQuery UI widget factory, can be omitted if jQuery UI is already included -->
+      <script src="/libs/blueimp-file-upload/js/vendor/jquery.ui.widget.js"></script>
+      <!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
+      <script src="/libs/blueimp-file-upload/js/jquery.iframe-transport.js"></script>
+      <!-- The basic File Upload plugin -->
+      <script src="/libs/blueimp-file-upload/js/jquery.fileupload.js"></script>
       <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
       <script src="/libs/bootstrap-material-design/dist/js/material.min.js"></script>
       <script src="/libs/bootstrap-material-design/dist/js/ripples.min.js"></script>
+      <script src="dist/build.js"></script>
       <script>
 $(document).ready(function() {
   // This command is used to initialize some elements and make them work properly
